src/test/ui/feature-gate-no-debug.stderr
error[E0658]: the `#[no_debug]` attribute was an experimental feature that has been deprecated due to lack of demand (see issue #29721)
  --> $DIR/feature-gate-no-debug.rs:13:1
   |
LL | #[no_debug] //~ ERROR the `#[no_debug]` attribute was
   | ^^^^^^^^^^^
   |
   = help: add #![feature(no_debug)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
